[package]
name = "rustic_math"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustic_math"
path = "src/lib.rs"


[dependencies]
clap = "4.5.4"
lazy_static = "1.4.0"
rustyline = "15.0.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
